[package]
name = "sqlsprinkler-cli"
version = "0.1.0"
authors = ["Gavin Pease <gavinpease@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
mysql = "16.1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"