[package]
name = "sqlsprinkler-cli"
version = "0.1.7"
authors = ["Gavin Pease <gavinpease@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "mysql", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
parking_lot = "0.10.0"
rppal = "0.12.0"
chrono = "0.3.0"
confy = "0.4.0"
lazy_static = "1.4.0"
paho-mqtt = { version = "0.11", features = ["bundled"] }
env_logger = "0.9"
log = "0.4.17"
#async-std = { version = "1", features = ["attributes"] }

